[gd_scene load_steps=7 format=3 uid="uid://cyjdww4jxpkm4"]

[ext_resource type="Script" path="res://scenes/ui/glass_menu.gd" id="1_4q7in"]
[ext_resource type="PackedScene" uid="uid://t0ypltxpbru7" path="res://scenes/ui/sound_button.tscn" id="2_pg0kt"]
[ext_resource type="Texture2D" uid="uid://b4mk2fnaucgmi" path="res://assets/ui/A.png" id="3_hjh4n"]
[ext_resource type="Texture2D" uid="uid://c0afqru0e25es" path="res://assets/ui/D.png" id="4_a1qet"]
[ext_resource type="Texture2D" uid="uid://d1i2l6d2obq2t" path="res://assets/ui/S.png" id="5_lacwp"]
[ext_resource type="Texture2D" uid="uid://dvq8au338fwrj" path="res://assets/ui/W.png" id="6_atk86"]

[node name="GlassMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_4q7in")

[node name="GlassesContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GlassesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="GlassesContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="ButtonContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -49.0
offset_right = 74.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="PlayButton" parent="ButtonContainer" instance=ExtResource("2_pg0kt")]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
auto_translate = false
text = "Start
"

[node name="Tips" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 64

[node name="ControlsContainer" type="PanelContainer" parent="Tips"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Tips/ControlsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Tips/ControlsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.909804, 0.482353, 0.454902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Controls"
horizontal_alignment = 1

[node name="Visuals" type="Node2D" parent="Tips/ControlsContainer/MarginContainer"]
position = Vector2(-47, 0)

[node name="A" type="Sprite2D" parent="Tips/ControlsContainer/MarginContainer/Visuals"]
position = Vector2(80, 54)
texture = ExtResource("3_hjh4n")

[node name="D" type="Sprite2D" parent="Tips/ControlsContainer/MarginContainer/Visuals"]
position = Vector2(113, 54)
texture = ExtResource("4_a1qet")

[node name="S" type="Sprite2D" parent="Tips/ControlsContainer/MarginContainer/Visuals"]
position = Vector2(96, 54)
texture = ExtResource("5_lacwp")

[node name="W" type="Sprite2D" parent="Tips/ControlsContainer/MarginContainer/Visuals"]
position = Vector2(96, 39)
texture = ExtResource("6_atk86")

[node name="Objective" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 50)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 64

[node name="TextContainer" type="PanelContainer" parent="Objective"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Objective/TextContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Objective/TextContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.909804, 0.482353, 0.454902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Mission"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Objective/TextContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.909804, 0.482353, 0.454902, 1)
theme_override_colors/font_outline_color = Color(0.909804, 0.482353, 0.454902, 1)
text = "Survive 10 minutes"
horizontal_alignment = 1
vertical_alignment = 2
